# codemaxxxing-codex

./: AGENTS.md  CMXCDX.md  README.md
codex-rs/: Cargo.toml
codex-rs/anthropic-translator/: Cargo.toml  README.md
codex-rs/anthropic-translator/data/: models.json
codex-rs/anthropic-translator/src/: cache_state.rs  lib.rs  main.rs  server.rs
codex-rs/anthropic-translator/src/anthropic/: event.rs  mod.rs  request.rs
codex-rs/anthropic-translator/src/openai/: mod.rs  request.rs  response_events.rs
codex-rs/anthropic-translator/src/translate/: cache.rs  messages.rs  mod.rs  model_spec.rs  raw_string_extractor.rs  request.rs  stream.rs  thinking.rs  tools.rs
codex-rs/anthropic-translator/tests/: anthropic_event.rs  anthropic_request.rs  cache_state.rs  openai_request.rs  openai_response_events.rs  server_integration.rs  translate_cache.rs  translate_messages.rs  translate_model_spec.rs  translate_request.rs  translate_stream.rs  translate_thinking.rs  translate_tools.rs
codex-rs/models-manager/: models.json
codex-rs/tui/src/: app.rs  chatwidget.rs  history_cell.rs
codex-rs/tui/src/app/: history_ui.rs  tests.rs
codex-rs/tui/src/chatwidget/: status_surfaces.rs
codex-rs/tui/src/snapshots/: codex_tui__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap  codex_tui__app__tests__clear_ui_header_fast_status_fast_capable_models.snap  codex_tui__history_cell__tests__session_header_indicates_yolo_mode.snap  codex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
scripts/: cmxcdx  cmxcdx-app
(+15 files in other folders)
