[package]
name = "codex-anthropic-translator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_anthropic_translator"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "codex-anthropic-translator"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = { workspace = true, features = ["http1", "json", "tokio"] }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
eventsource-stream = { workspace = true }
futures = { workspace = true, features = ["std"] }
http = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
wiremock = { workspace = true }
